@@ -1,3 +1,7 @@
+2010-01-30  Natan Bueno <natan.bueno@gmail.com>
+    * phpshell.php
+	Added AddOn to editor "vim".  
+
 2010-01-15  Natan Bueno <natan.bueno@gmail.com>
     * phpshell.php
 	Replaced deprecated function ereg by the function preg_match
